@@ -141,8 +141,11 @@ class PLC:
         # Get single program tags if progragName exists
         if programName in self.ProgramNames:
             program_tags = self._getProgramTagList(programName)
+            # Getting status from program_tags Response object
+            # _getUDT returns a list of LGXTags might need rework in the future
+            status = program_tags.Status
             program_tags = self._getUDT(program_tags.Value)
-            return Response(None, program_tags, 0)
+            return Response(None, program_tags, status)
         else:
             return Response(None, None, 'Program not found, please check name!')
 
@@ -153,8 +156,8 @@ class PLC:
         and runs _getTagList
         '''
         if not self.ProgramNames:
-            self._getTagList(False)
-        return Response(None, self.ProgramNames, 0)
+            tags = self._getTagList(False)
+        return Response(None, self.ProgramNames, tags.Status)
 
     def Discover(self):
         '''
@@ -1697,8 +1700,18 @@ class Response:
 
 def get_error_code(status):
     '''
-    Get the CIP error code string
+    Get the CIP error code string, if the status is a string it will be returned
     '''
+    # hack to check if status string for both py2 and py3
+    # because of nesting Response.Status to another Response obj constr
+    # some Success results are shown as 'Unknown error Success'
+    if sys.version_info.major == 3:
+        if isinstance(status, str):
+            return status
+    if sys.version_info.major == 2:
+        if isinstance(status, basestring):
+            return status
+
     if status in cip_error_codes.keys():
         err = cip_error_codes[status]
     else:
